# 3dnews

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  investigate_tweet.py  processed_ids.json  pyproject.toml  run.py  test_pipeline.py
alembic/: env.py
alembic/versions/: dc76a6668393_add_processed_items.py
app/: main.py
app/api/: routes.py
app/core/: config.py  database.py
app/models/: news.py
app/services/: llm.py  pipeline.py  telegram.py  x_scraper.py
