[project]
name = "news-3twit"
version = "1.0.0"
description = "Automated news curation pipeline: Twitter → LLM → Telegram"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "pydantic-settings>=2.1,<3.0",
    "httpx>=0.27,<1.0",
    "playwright>=1.40,<2.0",
    "google-generativeai>=0.4.0,<1.0.0",
    "aiogram>=3.4,<4.0",
    "apscheduler>=3.10,<4.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100
